// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests Default options 1`] = `
<body>
  <div />
  <svg
    height="480px"
    viewBox="0 0 640 480"
    width="640px"
  >
    <rect
      fill="white"
      height="480px"
      width="640px"
      x="0"
      y="0"
    />
  </svg>
</body>
`;

exports[`Snapshot tests Default options 2`] = `"<svg viewBox="0 0 640 480" width="640px" height="480px"><rect fill="white" x="0" y="0" width="640px" height="480px"></rect></svg>"`;

exports[`Snapshot tests Draw animations with a single value 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 L353.923 100 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="fill"
        dur="3s"
        repeatCount="indefinite"
        values="#FFF"
      />
      <animate
        attributeName="d"
        dur="3s"
        repeatCount="indefinite"
        values="M250 40 L353.923 100 L250 160 L146.077 100z"
      />
    </path>
    <path
      d="M353.923 220 L250 280 L250 160 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="fill"
        dur="3s"
        repeatCount="indefinite"
        values="#FFF"
      />
      <animate
        attributeName="d"
        dur="3s"
        repeatCount="indefinite"
        values="M353.923 220 L250 280 L250 160 L353.923 100z"
      />
    </path>
    <path
      d="M146.077 220 L250 280 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="fill"
        dur="3s"
        repeatCount="indefinite"
        values="#FFF"
      />
      <animate
        attributeName="d"
        dur="3s"
        repeatCount="indefinite"
        values="M146.077 220 L250 280 L250 220 L146.077 160z"
      />
    </path>
    <g
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <text
        transform="translate(250 160) matrix(0.707107,-0.408248,0.707107,0.408248,0,0) scale(1.224745) rotate(0)"
      >
        <tspan
          alignment-baseline="middle"
          font-family="Arial"
          font-size="12px"
          font-style="normal"
          font-weight="normal"
          text-anchor="middle"
        />
        <animatetransform
          additive="sum"
          attributeName="transform"
          attributeType="XML"
          begin="indefinite"
          dur="3s"
          fill="freeze"
          repeatCount="indefinite"
          type="rotate"
          values="180"
        />
      </text>
      <animatetransform
        additive="sum"
        attributeName="transform"
        attributeType="XML"
        begin="indefinite"
        dur="3s"
        fill="freeze"
        repeatCount="indefinite"
        type="translate"
        values="103.923,60"
      />
    </g>
    <path
      d="M275.98075 145 L252.195451 151.997035 L233.319332 141.098897 L237.495329 156.321441 L213.71003 163.318476 L240.076237 165.72949 L244.252233 180.952034 L256.371448 167.219579 L282.737655 169.630593 L263.861535 158.732455z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="d"
        dur="3s"
        repeatCount="indefinite"
        values="M353.923 100 L258.781806 127.988141 L183.277327 84.395589 L199.981314 145.285763 L104.84012 173.273905 L210.304946 182.917961 L227.008934 243.808135 L275.485793 188.878315 L380.950619 198.522371 L305.44614 154.92982z"
      />
    </path>
  </svg>
</div>
`;

exports[`Snapshot tests Draw animations with from and to 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 L353.923 100 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="fill"
        dur="3s"
        from="#FFF"
        repeatCount="indefinite"
        to="#DDD"
      />
      <animate
        attributeName="d"
        dur="3s"
        from="M250 40 L353.923 100 L250 160 L146.077 100z"
        repeatCount="indefinite"
        to="M250 100 L353.923 160 L250 220 L146.077 160z"
      />
    </path>
    <path
      d="M353.923 220 L250 280 L250 160 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="fill"
        dur="3s"
        from="#FFF"
        repeatCount="indefinite"
        to="#DDD"
      />
      <animate
        attributeName="d"
        dur="3s"
        from="M353.923 220 L250 280 L250 160 L353.923 100z"
        repeatCount="indefinite"
        to="M353.923 220 L250 280 L250 220 L353.923 160z"
      />
    </path>
    <path
      d="M146.077 220 L250 280 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="fill"
        dur="3s"
        from="#FFF"
        repeatCount="indefinite"
        to="#DDD"
      />
      <animate
        attributeName="d"
        dur="3s"
        from="M146.077 220 L250 280 L250 160 L146.077 100z"
        repeatCount="indefinite"
        to="M146.077 220 L250 280 L250 40 L146.077 -20z"
      />
    </path>
    <g
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <text
        transform="translate(250 160) matrix(0.707107,-0.408248,0.707107,0.408248,0,0) scale(1.224745) rotate(0)"
      >
        <tspan
          alignment-baseline="middle"
          font-family="Arial"
          font-size="12px"
          font-style="normal"
          font-weight="normal"
          text-anchor="middle"
        />
        <animatetransform
          additive="sum"
          attributeName="transform"
          attributeType="XML"
          begin="indefinite"
          dur="3s"
          fill="freeze"
          from="0"
          repeatCount="indefinite"
          to="180"
          type="rotate"
        />
      </text>
      <animatetransform
        additive="sum"
        attributeName="transform"
        attributeType="XML"
        begin="indefinite"
        dur="3s"
        fill="freeze"
        from="0,0"
        repeatCount="indefinite"
        to="103.923,60"
        type="translate"
      />
    </g>
    <path
      d="M275.98075 175 L263.861535 161.267545 L282.737655 150.369407 L256.371448 152.780421 L244.252233 139.047966 L240.076237 154.27051 L213.71003 156.681524 L237.495329 163.678559 L233.319332 178.901103 L252.195451 168.002965z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="d"
        dur="3s"
        from="M275.98075 175 L263.861535 161.267545 L282.737655 150.369407 L256.371448 152.780421 L244.252233 139.047966 L240.076237 154.27051 L213.71003 156.681524 L237.495329 163.678559 L233.319332 178.901103 L252.195451 168.002965z"
        repeatCount="indefinite"
        to="M353.923 220 L305.44614 165.07018 L380.950619 121.477629 L275.485793 131.121685 L227.008934 76.191865 L210.304946 137.082039 L104.84012 146.726095 L199.981314 174.714237 L183.277327 235.604411 L258.781806 192.011859z"
      />
    </path>
  </svg>
</div>
`;

exports[`Snapshot tests Draw animations with values 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 L353.923 100 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="fill"
        dur="3s"
        repeatCount="indefinite"
        values="#FFF;#DDD;#FFF"
      />
      <animate
        attributeName="d"
        dur="3s"
        repeatCount="indefinite"
        values="M250 40 L353.923 100 L250 160 L146.077 100z;M250 100 L353.923 160 L250 220 L146.077 160z;M250 40 L353.923 100 L250 160 L146.077 100z"
      />
    </path>
    <path
      d="M353.923 220 L250 280 L250 160 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="fill"
        dur="3s"
        repeatCount="indefinite"
        values="#FFF;#DDD;#FFF"
      />
      <animate
        attributeName="d"
        dur="3s"
        from="M353.923 220 L250 280 L250 160 L353.923 100z"
        repeatCount="indefinite"
        to="M353.923 220 L250 280 L250 220 L353.923 160z"
      />
    </path>
    <path
      d="M146.077 220 L250 280 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="fill"
        dur="3s"
        repeatCount="indefinite"
        values="#FFF;#DDD;#FFF"
      />
      <animate
        attributeName="d"
        dur="3s"
        repeatCount="indefinite"
        values="M146.077 220 L250 280 L250 220 L146.077 160z"
      />
    </path>
    <g
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <text
        transform="translate(250 160) matrix(0.707107,-0.408248,0.707107,0.408248,0,0) scale(1.224745) rotate(0)"
      >
        <tspan
          alignment-baseline="middle"
          font-family="Arial"
          font-size="12px"
          font-style="normal"
          font-weight="normal"
          text-anchor="middle"
        >
          TEST
        </tspan>
        <animatetransform
          additive="sum"
          attributeName="transform"
          attributeType="XML"
          begin="indefinite"
          dur="3s"
          fill="freeze"
          repeatCount="indefinite"
          type="rotate"
          values="0;180;360"
        />
      </text>
      <animatetransform
        additive="sum"
        attributeName="transform"
        attributeType="XML"
        begin="indefinite"
        dur="3s"
        fill="freeze"
        repeatCount="indefinite"
        type="translate"
        values="0,0;103.923,60;0,0"
      />
    </g>
    <path
      d="M275.98075 85 L252.195451 91.997035 L233.319332 81.098897 L237.495329 96.321441 L213.71003 103.318476 L240.076237 105.72949 L244.252233 120.952034 L256.371448 107.219579 L282.737655 109.630593 L263.861535 98.732455z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="d"
        dur="3s"
        repeatCount="indefinite"
        values="M275.98075 85 L252.195451 91.997035 L233.319332 81.098897 L237.495329 96.321441 L213.71003 103.318476 L240.076237 105.72949 L244.252233 120.952034 L256.371448 107.219579 L282.737655 109.630593 L263.861535 98.732455z;M353.923 40 L258.781806 67.988141 L183.277327 24.395589 L199.981314 85.285763 L104.84012 113.273905 L210.304946 122.917961 L227.008934 183.808135 L275.485793 128.878315 L380.950619 138.522371 L305.44614 94.92982z;M275.98075 85 L252.195451 91.997035 L233.319332 81.098897 L237.495329 96.321441 L213.71003 103.318476 L240.076237 105.72949 L244.252233 120.952034 L256.371448 107.219579 L282.737655 109.630593 L263.861535 98.732455z"
      />
    </path>
  </svg>
</div>
`;

exports[`Snapshot tests Draw circles 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M198.0385 130 A 73.484658 42.426407 0 0 0 301.9615 70 A 73.484658 42.426407 180 0 0 198.0385 130z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 220 A 73.484684 42.426392 119.999977 0 0 353.923 160 A 73.484684 42.426392 -60.000023 0 0 250 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 160 A 73.484684 42.426392 60.000023 0 0 250 220 A 73.484684 42.426392 -119.999977 0 0 146.077 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw commands 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M353.923 220 L250 280 L250 250 L301.9615 220 L301.9615 130 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M224.01925 85 A 36.742342 21.213196 60.000023 0 0 275.98075 115 L327.94225 85 A 36.742342 21.213196 60.000023 0 1 275.98075 55 L224.01925 85z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 100 L327.94225 85 L275.98075 115 L301.9615 130 L353.923 100 M250 40 L275.98075 55 L224.01925 85 L198.0385 70 L250 40z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M198.0385 130 L250 160 L198.0385 190 L146.077 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 160 L301.9615 220 L250 250 L198.0385 190z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M198.0385 70 L198.0385 130 L250 160 L301.9615 220 L301.9615 130 L275.98075 115 A 36.742342 21.213196 60.000023 0 1 224.01925 85 L198.0385 70z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 160 L198.0385 190 L250 250 L250 280 L146.077 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw curves with method aliases 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 M275.98075 55 A 36.742342 21.213196 60.000023 0 0 327.94225 85 L353.923 100 L353.923 130 A 36.742342 21.213196 -119.999977 0 0 353.923 190 L353.923 220 L327.94225 235 A 36.742329 21.213203 -180 0 0 275.98075 265 L250 280 L224.01925 265 A 36.742329 21.213203 0 0 0 172.05775 235 L146.077 220 L146.077 190 A 36.742342 21.213196 -60.000023 0 0 146.077 130 L146.077 100 L172.05775 85 A 36.742342 21.213196 119.999977 0 0 224.01925 55 L250 40z"
      fill="#EEE"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 40 L275.98075 55 A 36.742329 21.213203 180 0 0 327.94225 85 L353.923 100 L327.94225 115 A 36.742329 21.213203 -180 0 0 275.98075 145 L250 160 L224.01925 145 A 36.742329 21.213203 0 0 0 172.05775 115 L146.077 100 L172.05775 85 A 36.742329 21.213203 0 0 0 224.01925 55 L250 40z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 100 L353.923 130 A 36.742342 21.213196 119.999977 0 0 353.923 190 L353.923 220 L327.94225 235 A 36.742342 21.213196 -60.000023 0 0 275.98075 265 L250 280 L250 250 A 36.742342 21.213196 -60.000023 0 0 250 190 L250 160 L275.98075 145 A 36.742342 21.213196 119.999977 0 0 327.94225 115 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 160 L250 190 A 36.742342 21.213196 -119.999977 0 0 250 250 L250 280 L224.01925 265 A 36.742342 21.213196 -119.999977 0 0 172.05775 235 L146.077 220 L146.077 190 A 36.742342 21.213196 60.000023 0 0 146.077 130 L146.077 100 L172.05775 115 A 36.742342 21.213196 60.000023 0 0 224.01925 145 L250 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw methods 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 100 L353.923 160 L250 220 L146.077 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 160 L353.923 220 L250 280 L250 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 220 L250 280 L146.077 220 L146.077 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 40 L301.9615 70 L250 130 L198.0385 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M301.9615 70 L250 130 L250 190 L301.9615 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 130 L198.0385 100 L198.0385 160 L250 190z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw rectangles 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 L353.923 100 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 220 L250 280 L250 160 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 220 L250 280 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Paths without autoclose 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 160 L353.923 220 L250 280 L146.077 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 160 L353.923 220 L250 280 L146.077 220"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Remove animations 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 L353.923 100 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 220 L250 280 L250 160 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 220 L250 280 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 220 A 146.969316 84.852814 0 0 0 353.923 100 A 146.969316 84.852814 180 0 0 146.077 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 130 L244.166958 154.0972 L225.290838 164.995338 L240.56194 168.990089 L234.728898 193.087289 L250 171.45898 L265.271102 175.453731 L259.43806 158.091951 L274.709162 136.463642 L255.833042 147.36178z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;
